--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "14.2.14",
     "next-themes": "^0.4.1",
     "node-appwrite": "14.0.0",
+    "nuqs": "1.19.1",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
