--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jira-clone-nextjs",
+  "name": "synergy-sphere-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -28,10 +28,11 @@
     "@tanstack/react-table": "8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.0.0",
     "hono": "^4.6.9",
+    "idb": "^8.0.3",
     "lucide-react": "^0.454.0",
-    "next": "14.2.14",
+    "next": "^14.2.29",
     "next-themes": "^0.4.1",
     "node-appwrite": "14.0.0",
     "nuqs": "1.19.1",
@@ -52,9 +53,9 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^19",
     "@types/react-big-calendar": "1.8.11",
-    "@types/react-dom": "^18",
+    "@types/react-dom": "^19",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "postcss": "^8",
